# ExternalCue

./: .gitignore  Cargo.toml  README.md  TODO.md  agents.md
src/: main.rs
src/audio/: backend.rs  cpal_backend.rs  mod.rs  wasapi_backend.rs
